adding adhoc build setting

--- a/BuilserverDebug/Info.plist
+++ b/BuilserverDebug/Info.plist
@@ -38,6 +38,8 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>API_SWITCH</key>
+	<string>$(API_SWITCH)</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
